--- a/src/Cargo.Data.Infrastructure/Cargo.Data.Infrastructure.csproj
+++ b/src/Cargo.Data.Infrastructure/Cargo.Data.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <ProjectReference Include="..\Cargo.Data.Application\Cargo.Data.Application.csproj" />
   </ItemGroup>
 
 </Project>
