Add summarization logic

--- a/test/Cargo.Data.Application.IntegrationTests/Cargo.Data.Application.IntegrationTests.csproj
+++ b/test/Cargo.Data.Application.IntegrationTests/Cargo.Data.Application.IntegrationTests.csproj
@@ -10,6 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\samples\DeviceDataFoo1.json" Link="SampleData\DeviceDataFoo1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\samples\DeviceDataFoo2.json" Link="SampleData\DeviceDataFoo2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -25,6 +35,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Cargo.Data.Application\Cargo.Data.Application.csproj" />
+    <ProjectReference Include="..\..\src\Cargo.Data.Core\Cargo.Data.Core.csproj" />
+    <ProjectReference Include="..\..\src\Cargo.Data.Infrastructure\Cargo.Data.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SampleData\" />
   </ItemGroup>
 
 </Project>
